# saludtechalpes-medical-history-service

./: .coverage  .env.db  .env.example  .env.local  .env.test  .gitignore  .gitpod.yml  Dockerfile  README.md  docker-compose.local.yaml  docker-compose.yaml  makefile  pyproject.toml  requirements.txt  run.sh
.github/workflows/: action.yaml  merge-to-develop.yaml  release-to-main.yaml
docker/: entrypoint.sh
kubernetes/local/: k8s-configMap.yaml  k8s-deployment.yaml  k8s-ingress.yaml  k8s-postgres.yaml  k8s-secrets.yaml
kubernetes/staging/: k8s-configMap.yaml  k8s-deployment.tmpl  k8s-hpa.yaml  k8s-ingress.yaml  k8s-secrets.tmpl
postman/: SALUD_TECH_ALPES_DEVELOPMENT.postman_environment.json  SALUD_TECH_ALPES_LOCAL.postman_environment.json  SaludTechAlpes.postman_collection.json
src/: __init__.py
src/config/: config.py  db.py
src/modulos/historialMedico/aplicacion/: servicios.py
src/modulos/historialMedico/dominio/: comandos.py  entidades.py  eventos.py  objetos_valor.py  reglas.py  servicios.py
src/modulos/historialMedico/dominio/puertos/: historial_medico.py  procesar_evento_modelos.py  (+2 more)
src/modulos/historialMedico/infraestructura/: consumidores.py  despachador_dataframes.py  despachadores.py  dto.py  entidades.py  mapeadores.py
src/seedwork/dominio/: servicios.py
src/seedwork/infraestructura/: consumidor.py  consumidor_pulsar.py
tests/: entidadHistorialMedicoUnitTest.py  healthUnitTest.py  historialMedicoRepositorioUnitTest.py
tests/builder/: DiagnosticoBuilder.py  HistorialMedicoBuilder.py  PacienteBuilder.py
tests/config/: configUnitTest.py
(+4 files in other folders)
