[project]
name = "saludtechalpes-medical-history-service"
version = "1.0.0"
authors = [
  { name="Pedro Capriles", email="p.caprilespe@uniandes.edu.co" },
]
description = "This is a python ðŸ flask ðŸŒ¶ï¸ service to record the medical history ðŸ©ºðŸ“‹"
readme = "README.md"
requires-python = ">=3.10"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
pythonpath = [
  ".", "src",
]